<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/whatwork"
        android:id="@+id/textView2"
        android:textSize="38sp"
        android:textColor="#1C98D5"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <View android:id="@+id/primerdivisor"
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#ffffff"
        android:layout_alignTop="@+id/WhatWorkMsg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/WhatWorkMsg"
        android:hint="@string/defmsg"
        android:gravity="left"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/WhatWorkMsg"
        android:weightSum="1">



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/WhatWorkSend"
            android:textColor="@color/White"
            android:background="#1C98D5"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight=".5"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/WhatWorkCanCel"
            android:textColor="#1C98D5"
            android:background="#A2DAF4"
            android:layout_alignParentLeft="true"
            android:layout_weight=".5"/>
    </LinearLayout>
</RelativeLayout>
