<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/sendp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#1C98D5"
        android:textSize="38sp" />

    <View
        android:id="@+id/primerdivisor"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/PingMsg"
        android:background="#ffffff" />

    <EditText
        android:id="@+id/PingMsg"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/defmsg"
        android:inputType="textMultiLine"
        android:paddingTop="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PingMsg"
        android:orientation="horizontal"
        android:weightSum="1">


        <Button
            android:id="@+id/sendping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_weight=".5"
            android:background="#1C98D5"
            android:text="@string/send"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/cancelping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/sendping"
            android:layout_weight=".5"
            android:background="#A2DAF4"
            android:text="@string/cancel"
            android:textColor="#1C98D5" />
    </LinearLayout>
</RelativeLayout>
