<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/action_bar_color"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/logo"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignStart="@+id/logo"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/cloudstaff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textSize="40sp"
        android:textStyle="normal|bold|italic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/logo"
        android:layout_alignRight="@+id/logo"
        android:layout_below="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:text="@string/team_manager"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/White"
        android:textSize="18sp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/pin1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/White"
            android:ems="10"
            android:focusable="true"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:nextFocusRight="@+id/pin2"
            android:password="true"
            android:singleLine="true">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/pin2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/White"
            android:ems="10"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:nextFocusRight="@+id/pin3"
            android:password="true"
            android:singleLine="true" />

        <EditText
            android:id="@+id/pin3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/White"
            android:ems="10"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:nextFocusRight="@+id/pin4"
            android:password="true"
            android:singleLine="true" />


        <EditText
            android:id="@+id/pin4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/White"
            android:ems="10"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:nextFocusDown="@+id/psub"
            android:password="true" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/enter_pin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/okay"
        android:visibility="gone" />

</RelativeLayout>
